# teachertapp

./: .gitignore  Cargo.toml  README.md  database.sqlite  diesel.toml
.github/workflows/: Test.yml
migrations/2023-08-04-195438_create_schools/: up.sql
schema/: CreateSchool.schema.json  ErrorDetail.schema.json  List.schema.json  School.schema.json  createSchool.schema.json  list.schema.json  school.schema.json
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  schools.rs  test_utils.rs
