[package]
name = "teachertapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-test-helper = "0.3.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
tempfile = "3.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }